<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:text="@string/act1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"/>
    <Button
        android:id="@+id/button_scan"
        android:text="@string/scan"
        android:layout_below="@id/heading"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:clickable="true"
        android:onClick="ButtonOnClick"/>
    <Button
        android:id="@+id/button_update"
        android:text="@string/update"
        android:layout_below="@id/heading"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:clickable="true"
        android:onClick="ButtonOnClick"/>
    <Button
        android:id="@+id/button_stop"
        android:text="@string/stop"
        android:layout_below="@id/heading"
        android:layout_marginLeft="230dp"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:clickable="true"
        android:onClick="ButtonOnClick"/>

    <ListView
        android:id="@+id/listview_names"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:clickable="true"
        android:layout_below="@id/button_stop"/>


</RelativeLayout>
