<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.user.ble.app.PairUnpair">

    <TextView android:text="@string/hello_world"
        android:id="@+id/details"
        android:paddingBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button_pair"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_below="@id/details"
        android:clickable="true"
        android:onClick="buttonOnClick"
        android:text="@string/pair"/>
    <Button
        android:id="@+id/button_unpair"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginLeft="225dp"
        android:layout_below="@id/details"
        android:clickable="true"
        android:onClick="buttonOnClick"
        android:text="@string/unpair"/>
    <TextView android:text="-Connection State-"
        android:id="@+id/ConnectionState"
        android:layout_below="@id/button_pair"
        android:paddingBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:text="SERVICES:\t\t\t\t\t\t\t\t\t\t\tCHARACTERISTICS:"
        android:id="@+id/textView_data"
        android:layout_below="@id/ConnectionState"
        android:paddingBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/listView_Services"
        android:layout_width="160dp"
        android:layout_height="match_parent"
        android:layout_below="@id/textView_data">
        </ListView>

    <ListView
        android:id="@+id/listView_characteristics"
        android:layout_width="180dp"
        android:layout_marginLeft="170dp"
        android:layout_height="match_parent"
        android:layout_below="@id/textView_data">
    </ListView>


</RelativeLayout>
